# flight-dash

./: .gitignore  README.md  docker-compose.yaml
.docker/: data.sql  new_user.sql
api/: .dockerignore  Dockerfile  Dockerfile.dev  Pipfile  README.md  deps.py  main.py  pyproject.toml  utils.py
api/core/: config.py  db.py
api/data/: create_db.py  data_preprocessing.py  init_db.py
api/getting_data/: data_preprocessing.py  init_local_db.py
api/models/: airlines.py  airports.py  flights.py
api/repository/: airlines.py  airports.py  flights_repository.py  unit_of_work.py
api/routes/: airlines.py  airports.py  flights.py
api/schemas/: airlines.py  airports.py  flights.py
api/tests/: conftest.py  init_test_db.py  test_flights.py
api/tests/unit/: test_airlines.py  test_airports.py  test_flights.py
api/utils/: data_preprocessing.py  init_db.py  kaggle_api.py
