[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "loguru",
    "pytest",
    "httpx",
    "pandas",
    "pydantic-settings",
    "sqlalchemy",
    "databases",
    "kaggle>=1.6.17",
    "sqlalchemy-utils>=0.41.2",
    "psycopg2>=2.9.9",
    "psycopg[binary]>=3.2.1",
]
